--- a/config/vhosts/default.conf
+++ b/config/vhosts/default.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
-    DocumentRoot "/var/www/html"
+    DocumentRoot "/var/www/html/task_app/public"
     ServerName localhost
-	<Directory "/var/www/html/">
+	<Directory "/var/www/html/task_app/public/">
 		AllowOverride all
 	</Directory>
 </VirtualHost>
