Frontend almost complete

--- a/config/vhosts/default.conf
+++ b/config/vhosts/default.conf
@@ -3,6 +3,8 @@
     DocumentRoot "/var/www/html/task_app/public"
     ServerName localhost
 	<Directory "/var/www/html/task_app/public/">
-		AllowOverride all
+		AllowOverride All
+        	Order Allow,Deny
+        	Allow from All
 	</Directory>
 </VirtualHost>
