--- a/www/task_app/.env
+++ b/www/task_app/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=1b895c30517089a57bc7a7e04bf6c72f
-#TRUSTED_PROXIES=127.0.0.1,127.0.0.2
+APP_SECRET=8d28325a02ce6af627ea69950a3f430c
+#TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
