--- a/www/task_app/composer.json
+++ b/www/task_app/composer.json
@@ -2,21 +2,25 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.0.8",
+        "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/console": "3.4.*",
-        "symfony/dotenv": "3.4.*",
+        "sensio/framework-extra-bundle": "^5.5",
+        "symfony/apache-pack": "^1.0",
+        "symfony/console": "4.4.*",
+        "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "3.4.*",
-        "symfony/yaml": "3.4.*"
+        "symfony/framework-bundle": "4.4.*",
+        "symfony/twig-pack": "^1.0",
+        "symfony/webpack-encore-bundle": "^1.7",
+        "symfony/yaml": "4.4.*"
     },
     "require-dev": {
     },
     "config": {
 	"platform": {
-      	    "php": "7.1.20"
-        },
+	    "php": "7.1.20"
+	},
         "preferred-install": {
             "*": "dist"
         },
@@ -36,6 +40,7 @@
         "paragonie/random_compat": "2.*",
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php71": "*",
         "symfony/polyfill-php70": "*",
         "symfony/polyfill-php56": "*"
     },
@@ -57,7 +62,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "3.4.*"
+            "require": "4.4.*"
         }
     }
 }
