--- a/bin/webserver/Dockerfile
+++ b/bin/webserver/Dockerfile
@@ -22,6 +22,7 @@ RUN apt-get -y install libmcrypt-dev
 RUN docker-php-ext-install mcrypt
 
 RUN apt-get -y install libsqlite3-dev libsqlite3-0 mysql-client
+RUN docker-php-ext-install pdo
 RUN docker-php-ext-install pdo_mysql 
 RUN docker-php-ext-install pdo_sqlite
 RUN docker-php-ext-install mysqli
