--- a/www/task_app/composer.json
+++ b/www/task_app/composer.json
@@ -11,11 +11,15 @@
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/orm-pack": "^1.0",
+        "symfony/property-access": "4.4.*",
+        "symfony/serializer": "4.4.*",
         "symfony/twig-pack": "^1.0",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.14"
     },
     "config": {
 	"platform": {
